Fix gap issue in new products section of a category

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1976,6 +1976,10 @@ border: 1px solid var(--borderFavoriteAdress);
         font-size: 16px;
     }
 
+    .nouveaute-liste {
+        display: block;
+    }
+
     /* Filtres */
 
     .filtres {
